[package]
name = "yew-dsl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/Madoshakalaka/yew", rev = "f574c2fce319ea7f0893c01b001176615e374792" }
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
